# SpectroProtz

./: .gitignore  README.md  launch_spectro_app.cmd  lookUpWindow.md  pyproject.toml  requirements.txt
docs/: ftir-indexer.md  ftirSolventCorrectionRef.md  ftir_data_processing_design.md  release_notes.md  uvvis_signal_processing_reference.md  workflow_overview.md
scripts/: index_ir_metadata.py  jdxIndexBuilder.py
spectro_app/: __init__.py  app_context.py  debugCheckList.md  featureList.md  main.py  requirements.txt
spectro_app/config/: defaults.yaml
spectro_app/engine/: audit.py  excel_writer.py  ftir_index_schema.py  ftir_lookup.py  io_common.py  peak_detection.py  pipeline.py  plots.py  plugin_api.py  qc.py  recipe_model.py  run_controller.py  solvent_reference.py
spectro_app/io/: __init__.py  opus.py
spectro_app/resources/: README.txt
spectro_app/tests/: conftest.py  jdx_index_builder_test_utils.py  test_core_pipeline.py  test_file_queue_ordering.py  test_index_ir_metadata.py  test_io_uvvis.py  test_jcamp_parser.py  test_jdx_index_builder_consensus.py  test_jdx_index_builder_excel_export.py  test_jdx_index_builder_noise.py  test_jdx_index_builder_peak_detection.py  test_jdx_index_builder_promoted_columns.py  test_main_window_raw_preview.py  test_main_window_runcontroller.py  test_mainwindow_close.py  test_mass_load.py  test_opus_external_readers.py  test_opus_loader.py  test_pipeline_uvvis.py  test_plugins_contract.py  test_preprocess_short_spectrum.py  test_presets.py  test_preview_widget.py  test_queue_inspector.py  (+9 more)
tests/: test_jdx_index_builder.py
(+34 files in other folders)
