[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectro-app"
version = "0.1.0"
description = "Multimodule spectroscopy batch processing app (PyQt)"
authors = [{name="Your Name", email="you@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pyqtgraph>=0.13",
    "openpyxl>=3.1",
    "pillow>=10.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["spectro_app"]
include = ["spectro_app*"]
