[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectro-app"
version = "0.1.0"
description = "Multimodule spectroscopy batch processing app (PyQt)"
authors = [{name="Your Name", email="you@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.8",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pillow>=10.0",
    "PyQt6>=6.6",
    "pyqtgraph>=0.13",
    "PyYAML>=6.0",
    "scipy>=1.12",
]

[tool.setuptools.packages.find]
where = ["spectro_app"]
include = ["spectro_app*"]
